--- a/src/app/pages/galeries/galeries.component.scss
+++ b/src/app/pages/galeries/galeries.component.scss
@@ -12,7 +12,11 @@ body {
   margin-top: $SPACER-HEIGHT;
 
   @include sm {
-	  margin-top: units(10);
+	margin-top: units(10);
+	
+	@media (prefers-color-scheme: dark) {
+		margin-top: 3.8em;
+	}
   }
 }
 
